[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.6.1"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[tool.poetry.group.risdk.dependencies]
ri-sdk = "^1.0.0"

[tool.poetry.group.servokit.dependencies]
gpiod = "^2.1.3"
adafruit-circuitpython-servokit = "^1.3.17"
